# cpcc2_tiago

./: .markdownlint.json  .pre-commit-config.yaml  CMakeLists.txt  README.md  crocoddyl_controller.xml  package.xml  pveg_chained_controller.xml
.github/workflows/: build.yml  humble.yml  rolling.yml
config/: cpcc2_tiago_parameters.yaml
include/cpcc2_tiago/: crocoddyl_controller.hpp  locked.hpp  logger_OCP.hpp  model_builder.hpp  parallel_croc_solver.hpp  pveg_chained_controller.hpp  shared_mutex.hpp  tiago_OCP.hpp  tiago_OCP_maker.hpp  utils.hpp  visibility_control.h  visibility_control.hpp
launch/: ccp2_tiago.launch.py  cpcc2_tiago.launch.py  crocoddyl_controller.launch.py  pveg_chained_controller.launch.py
scripts/: gui_target_sender.py  performance_evaluator.py  performance_full_plotter.py  performance_plotter.py
src/: crocoddyl_controller.cpp  logger_OCP.cpp  model_builder.cpp  parallel_croc_solver.cpp  pveg_chained_controller.cpp  tiago_OCP.cpp  tiago_OCP_costs.cpp  tiago_OCP_maker.cpp
