<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpcc2_tiago</name>
  <version>0.0.0</version>
  <description>CPCC2 for Tiago, a chained controller that uses crocoddyl to control the tiago arm, the target is gatherd through a topic,
  the solver is parallelized to enhance performances</description>
  <maintainer email="juliengleyze3@gmail.com">julien</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>generate_parameter_library</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>launch_pal</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>rosbag2</depend>
  <depend>rosbag2_storage_mcap</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
